# agentic-engram

./: .gitignore  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  poc_local_mem0.py  pyproject.toml
docs/prds/: v3_consolidation.md  設計.md
scripts/: ae-console.py  ae-consolidate.py  ae-miner.py  ae-recall.py  ae-save.py
src/engram/: console.py  consolidate.py  cursor.py  db.py  graph.py  harvest.py  llm.py  miner.py  prompts.py  prompts_consolidate.py  prompts_harvest.py  recall.py  save.py
src/engram/cli/: console.py  consolidate.py  groom.py  harvest.py  miner.py  recall.py
src/engram/parsers/: __init__.py  base.py  claude_code.py  codex.py
src/engram/sources/: __init__.py  awesome.py  kaggle.py  rss.py  search.py
tasks/20260326-uv-installation-docs/: TODO.md  timeline.md
tasks/20260331-ae-harvest/: TODO.md  timeline.md
tests/: conftest.py  test_console.py  test_consolidate.py  test_graph.py  test_harvest.py  test_miner.py  test_parser_claude_code.py  test_parser_codex.py  test_recall.py  test_sources.py
