[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-engram"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "lancedb",
    "sentence-transformers",
    "pyarrow",
    "streamlit",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
